--- a/PsyCoderWechat/PsyCoderWechat.csproj
+++ b/PsyCoderWechat/PsyCoderWechat.csproj
@@ -1385,8 +1385,15 @@
     <Content Include="plugins\UEditor\ueditor.parse.js" />
     <Content Include="plugins\UEditor\ueditor.parse.min.js" />
     <Content Include="Resource\Css\WechatStyle.css" />
+    <Content Include="Resource\font-awesome-4.7.0\css\font-awesome.css" />
+    <Content Include="Resource\font-awesome-4.7.0\css\font-awesome.min.css" />
+    <Content Include="Resource\font-awesome-4.7.0\fonts\fontawesome-webfont.svg" />
+    <Content Include="Resource\font-awesome-4.7.0\HELP-US-OUT.txt" />
     <Content Include="Resource\Image\avatar.png" />
     <Content Include="Resource\Image\oldbg.png" />
+    <Content Include="Resource\ionicons-2.0.1\css\ionicons.css" />
+    <Content Include="Resource\ionicons-2.0.1\css\ionicons.min.css" />
+    <Content Include="Resource\ionicons-2.0.1\fonts\ionicons.svg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="cert\apiclient_cert.p12" />
@@ -1440,6 +1447,42 @@
     <Content Include="plugins\UEditor\third-party\video-js\font\vjs.ttf" />
     <Content Include="plugins\UEditor\third-party\video-js\font\vjs.woff" />
     <None Include="Properties\PublishProfiles\vip.pubxml" />
+    <Content Include="Resource\font-awesome-4.7.0\fonts\fontawesome-webfont.eot" />
+    <Content Include="Resource\font-awesome-4.7.0\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Resource\font-awesome-4.7.0\fonts\fontawesome-webfont.woff" />
+    <Content Include="Resource\font-awesome-4.7.0\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Resource\font-awesome-4.7.0\fonts\FontAwesome.otf" />
+    <Content Include="Resource\font-awesome-4.7.0\less\animated.less" />
+    <Content Include="Resource\font-awesome-4.7.0\less\bordered-pulled.less" />
+    <Content Include="Resource\font-awesome-4.7.0\less\core.less" />
+    <Content Include="Resource\font-awesome-4.7.0\less\fixed-width.less" />
+    <Content Include="Resource\font-awesome-4.7.0\less\font-awesome.less" />
+    <Content Include="Resource\font-awesome-4.7.0\less\icons.less" />
+    <Content Include="Resource\font-awesome-4.7.0\less\larger.less" />
+    <Content Include="Resource\font-awesome-4.7.0\less\list.less" />
+    <Content Include="Resource\font-awesome-4.7.0\less\mixins.less" />
+    <Content Include="Resource\font-awesome-4.7.0\less\path.less" />
+    <Content Include="Resource\font-awesome-4.7.0\less\rotated-flipped.less" />
+    <Content Include="Resource\font-awesome-4.7.0\less\screen-reader.less" />
+    <Content Include="Resource\font-awesome-4.7.0\less\stacked.less" />
+    <Content Include="Resource\font-awesome-4.7.0\less\variables.less" />
+    <Content Include="Resource\font-awesome-4.7.0\scss\_animated.scss" />
+    <Content Include="Resource\font-awesome-4.7.0\scss\_bordered-pulled.scss" />
+    <Content Include="Resource\font-awesome-4.7.0\scss\_core.scss" />
+    <Content Include="Resource\font-awesome-4.7.0\scss\_fixed-width.scss" />
+    <Content Include="Resource\font-awesome-4.7.0\scss\_icons.scss" />
+    <Content Include="Resource\font-awesome-4.7.0\scss\_larger.scss" />
+    <Content Include="Resource\font-awesome-4.7.0\scss\_list.scss" />
+    <Content Include="Resource\font-awesome-4.7.0\scss\_mixins.scss" />
+    <Content Include="Resource\font-awesome-4.7.0\scss\_path.scss" />
+    <Content Include="Resource\font-awesome-4.7.0\scss\_rotated-flipped.scss" />
+    <Content Include="Resource\font-awesome-4.7.0\scss\_screen-reader.scss" />
+    <Content Include="Resource\font-awesome-4.7.0\scss\_stacked.scss" />
+    <Content Include="Resource\font-awesome-4.7.0\scss\_variables.scss" />
+    <Content Include="Resource\font-awesome-4.7.0\scss\font-awesome.scss" />
+    <Content Include="Resource\ionicons-2.0.1\fonts\ionicons.eot" />
+    <Content Include="Resource\ionicons-2.0.1\fonts\ionicons.ttf" />
+    <Content Include="Resource\ionicons-2.0.1\fonts\ionicons.woff" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
